GET evidences from API
